--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+# pytorch
+# torch 2.1.0
+
 # CLIP requirements
 ftfy 
 regex 
 tqdm
 
 # mmdetection requirements
+mmcv<=1.5.0
 cython
-numpy
+numpy==1.19.2
 cityscapesscripts
 imagecorruptions
 scipy
@@ -28,3 +32,21 @@ pytest
 ubelt
 xdoctest>=0.10.0
 yapf
+
+# taming-transformers
+albumentations #==0.4.3
+opencv-python #==4.1.2.30
+pudb #==2019.2
+imageio #==2.9.0
+imageio-ffmpeg #==0.4.2
+pytorch-lightning #==1.0.8
+omegaconf #==2.0.0
+test-tube>=0.7.5
+streamlit>=0.73.1
+einops # ==0.3.0
+more-itertools>=8.0.0
+transformers #==4.3.1
+
+# ldm 
+black
+kornia
