--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,9 @@ asynctest
 codecov
 flake8
 interrogate
-isort==4.3.21
+isort
 kwarray # Note: used for kwarray.group_items, this may be ported to mmcv in the future.
-onnx==1.7.0
+onnx
 onnxruntime>=1.8.0
 protobuf<=3.20.1
 pytest
@@ -34,18 +34,18 @@ xdoctest>=0.10.0
 yapf
 
 # taming-transformers
-albumentations #==0.4.3
-opencv-python #==4.1.2.30
-pudb #==2019.2
-imageio #==2.9.0
-imageio-ffmpeg #==0.4.2
-pytorch-lightning #==1.0.8
-omegaconf #==2.0.0
+albumentations 
+opencv-python 
+pudb 
+imageio 
+imageio-ffmpeg 
+pytorch-lightning 
+omegaconf 
 test-tube>=0.7.5
 streamlit>=0.73.1
-einops # ==0.3.0
+einops 
 more-itertools>=8.0.0
-transformers #==4.3.1
+transformers 
 
 # ldm 
 black
