--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,12 @@
+# vscode
 **/__pycache__
 .vscode
-checkpoint
-src
-openai-local
-outputs
-tmp
 
 # extensions
 *.egg-info
 *.py[cod]
 
-# envs
-.pt13
-.pt2
-
 # directories
 /checkpoints
-/dist
 /outputs
-/build
 /src
-/openai
